Finished implementing PlayState login